--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@ form{
         <ul class="navbar-nav ml-auto navList">
             <li class="nav-item active"><a href="#" class="nav-link"><i class="fas fa-home"></i> HOME</a></li>
             <li class="nav-item"><a href="#About" class="nav-link"><i class="fas fa-users"></i> About</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link"><i class="fas fa-cogs"></i> Services</a></li>
+            <li class="nav-item"><a href="#services" class="nav-link"><i class="fas fa-cogs"></i> Education</a></li>
             <li class="nav-item"><a href="#skills" class="nav-link"><i class="fas fa-briefcase"></i> Skills</a></li>
             <li class="nav-item"><a href="#project" class="nav-link"><i class="fa-duotone fa-solid fa-diagram-project"></i> Project</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link"><i class="fas fa-phone"></i> Contact</a></li>
