--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ a {
 }
 
 .about-img img {
+
+  border-radius: 50%;
     max-width: 300px;
     height: 200vwvw;
     float: left;
@@ -250,7 +252,7 @@ a {
 
 .about-text {
     flex: 1;
-    margin-left: 100px;
+    margin-left: 50px;
 }
 
 .about-text h3 {
@@ -900,8 +902,7 @@ form{
             <div class="home-sci">
                 <a href="https://wa.me/qr/X7TN2SZLXHDBK1" style="--i:7"><i class="bi bi-whatsapp"></i></a>
                 <a href="https://www.facebook.com/share/1FBqbFQy7h/" style="--i:8"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/chitrakootwala_larka?igsh=dm5ka2lqd2k5OTJn" style="--i:9"><i
-                        class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/chitrakootwala_larka?igsh=dm5ka2lqd2k5OTJn" style="--i:9"><i class="bi bi-instagram"></i></a>
                 <a href="#" style="--i:10"><i class="bi bi-youtube"></i></a>
             </div>
             <a href="#" class="btn-box">More About Me</a>
