--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body {
     color: #ededed;
     background-color: #081b29;
     overflow-x: hidden;
+    margin-top: 20PX;
 }
 
 img {
@@ -45,7 +46,17 @@ a {
 }
 
 /* ===================== NAVBAR ===================== */
+.navbar{
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #333;
+  color: white;
+  padding: 15px;
+  z-index: 1000;
 
+}
 
 /* LOGO ANIMATION */
 .brand-navbar img {
