--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Er. Dheeraj Kumar</title>
+        <title> Er. Dheeraj Kuamr</title>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <!-- BOOTSTRAP 4.6 -->
         <link rel="stylesheet"
@@ -83,7 +85,6 @@ a {
     animation: slideLeft 1.5s ease forwards;
 }
 
-
 /* HOVER COLOR */
 .navList .nav-link:hover {
     color: #0ef !important;
@@ -125,7 +126,7 @@ a {
 }
 
 /* MOBILE FIX */
-@media (max-width: 991px) {
+@media (max-width: 1400px) {
     .navList .nav-link {
         margin-left: 0;
         padding: 10px 15px;
@@ -136,7 +137,7 @@ a {
 
 /* ===================== HOME SECTION ===================== */
 .home {
-    position: relative;
+     position: relative;
     width: 100vw;
     justify-content: space-between;
     height: 100vh;
@@ -219,30 +220,6 @@ a {
         0 0 100px cyan, 0 0 200px cyan;
 }
 
-.btn-box {
-    display: inline-block;
-    padding: 12px 28px;
-    background: #0ef;
-    border-radius: 40px;
-    color: #081b29;
-    letter-spacing: 1px;
-    text-decoration: none;
-    font-weight: 600;
-    opacity: 0;
-    animation: slideTop 2s ease forwards;
-    animation-delay: 2s;
-    box-shadow: 0 0 5px #0ef,
-        0 0 25px #0ef;
-
-
-}
-
-.btn-box:hover {
-    box-shadow: 0 0 5px cyan,
-        0 0 25px cyan, 0 0 50px cyan,
-        0 0 100px cyan, 0 0 200px cyan;
-}
-
 
 /* ===================== ABOUT SECTION ===================== */
 
@@ -259,21 +236,21 @@ a {
 
   border-radius: 50%;
     max-width: 300px;
-    height: 200vwvw;
+    /* height: 20vw; */
     float: left;
-    margin-left: 20px;
+   
     
-    /* margin: 0 0 0 10px; */
+    margin: 0 10px 0 10px;
 
 }
 
 .about-text {
-    flex: 1;
-    margin-left: 20px;
+    font-size: 40px;
+    margin-left: 50px;
 }
 
 .about-text h3 {
-    font-size: 60px;
+    font-size: 50px;
 
 }
 
@@ -317,15 +294,16 @@ a {
 }
 
 .container {
-    padding: 90px;
+   padding: 90px;
+   
 }
 
 .service-list {
     display: grid;
     flex-wrap: wrap;
     gap: 40px;
-    margin-top: 50px;
-    justify-content: space-between;
+    margin-left: -70px;
+    /* justify-content: space-between; */
 }
 
 .service-list div {
@@ -376,30 +354,6 @@ a {
     transform: translateY(-10px);
 }
 
-.read {
-    display: inline-block;
-    padding: 12px 28px;
-    background: #0ef;
-    border-radius: 40px;
-    font-size: 16px;
-    color: #081b29;
-    letter-spacing: 1px;
-    text-decoration: none;
-    font-weight: 600;
-    opacity: 0;
-    animation: slideTop 2s ease forwards;
-    animation-delay: 2s;
-    box-shadow: 0 0 5px #0ef,
-        0 0 25px #0ef;
-}
-
-.read:hover {
-    box-shadow: 0 0 5px cyan,
-        0 0 25px cyan, 0 0 50px cyan,
-        0 0 100px cyan, 0 0 200px cyan;
-
-
-}
 
 /* General Reset & Fonts */
 
@@ -810,13 +764,17 @@ a {
 
 
 #contact {
-    padding: 80px 10%;
+    /* padding: 80px 10%; */
     text-align: center;
-    background: #0d0d0d;
+    background: rgba(0, 0, 0, 0.8);
+}
+.section-content{
+    margin-top: 50px;
 }
 
 
 form{
+    margin-top: -50px;
     border: #e0e0e0;
 }
 
@@ -825,7 +783,7 @@ form{
 }
 
 .contact-section {
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 .form-control {
@@ -842,21 +800,25 @@ form{
 
 .submit {
     background: #00eeff;
-    padding: 10px 18px;
-    border-radius: 5px;
-    font-weight: 600;
+  
+    border-radius: 40px;
+    font-weight: 700px;
+    font-size: 12px;
 }
 
 .submit:hover {
     background: #fff;
     color: #000;
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
 
 /* ===================== FOOTER ===================== */
 .footer {
     text-align: center;
-    margin-top: 40px;
-    padding: 20px 0;
+    margin-top: -50px;
+    padding: 10px 0 10px 0;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -888,37 +850,44 @@ form{
     </style>
     </head>
     <body>
-
         <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navStyle">
-    <a class="brand-navbar" href="#">
-        <img src="Logo.png" height="60px">
-    </a>
+        <nav class="navbar navbar-expand-lg navStyle">
+            <a class="brand-navbar" href="#">
+                <img src="Logo.png" height="60px">
+            </a>
 
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#mainMenu">
-        <span><i class="fas fa-align-right iconStyle"></i></span>
-    </button>
+            <button class="navbar-toggler" data-toggle="collapse"
+                data-target="#mainMenu">
+                <span><i class="fas fa-align-right iconStyle"></i></span>
+            </button>
 
-    <div class="collapse navbar-collapse" id="mainMenu">
-        <ul class="navbar-nav ml-auto navList">
-            <li class="nav-item active"><a href="#" class="nav-link">HOME</a></li>
-            <li class="nav-item"><a href="#About" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Education</a></li>
-            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-            <li class="nav-item"><a href="#project" class="nav-link">Project</a></li>
-            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            <div class="collapse navbar-collapse" id="mainMenu">
+                <ul class="navbar-nav ml-auto navList">
+                    <li class="nav-item active"><a href="#"
+                            class="nav-link">HOME</a></li>
+                    <li class="nav-item"><a href="#About"
+                            class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#services"
+                            class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#skills"
+                            class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#project"
+                            class="nav-link">Project</a></li>
+                    <li class="nav-item"><a href="#contact"
+                            class="nav-link">Contact</a></li>
 
-            <!-- GitHub Button -->
-            <li class="nav-item">
-                <a href="https://github.com/Chitrakootwala-larka" 
-                   class="btn btn-light ml-3"  style="padding: 10px 16px; background: aqua; color: black;border-radius: 40px;  width: max-content;"
-                   target="_blank">
-                    <i class="fab fa-github"> GitHub Profile</i> 
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
+                    <!-- GitHub Button -->
+                    <li class="nav-item">
+                        <a href="https://github.com/Chitrakootwala-larka"
+                            class="btn btn-light ml-3"
+                            style="padding: 10px 16px; font-size: 12px; background: aqua; color: black;border-radius: 40px;  width: max-content;"
+                            target="_blank">
+                            <i class="fab fa-github"> GitHub Profile</i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
         <!-- HOME SECTION -->
         <section class="home">
@@ -937,10 +906,11 @@ form{
                         <a
                             href="https://www.instagram.com/chitrakootwala_larka?igsh=dm5ka2lqd2k5OTJn"
                             style="--i:9"><i class="bi bi-instagram"></i></a>
+                             <a href="https://x.com/Chitrakootwala"
+                            target="_blank"><i class="bi bi-twitter-x"></i></a>
                         <a href="#" style="--i:10"><i
                                 class="bi bi-youtube"></i></a>
                     </div>
-                    <a href="#" class="btn-box">More About Me</a>
                 </p>
             </div>
             <span class="home-imghover"></span>
@@ -965,7 +935,12 @@ form{
                         cross-functional teams to deliver robust, user-friendly,
                         full-stack solutions.
                         R</p>
-                    <a href="#" class="btn-box">More About Me</a>
+                    <a
+                        href="https://docs.google.com/document/d/13kP1WTVIaNjpko-k7Y7pYROgeKTKma11wYXUB76d5aw/edit?usp=sharing"
+                        class="btn btn-light ml-3 submit"
+                        target="_blank">
+                        <i class="bi bi-file-earmark-person"> Check Resume</i>
+                    </a>
                 </div>
             </div>
         </section>
@@ -984,9 +959,7 @@ form{
                             <h3>HIGHSCHOOL</h3>
                             <p>SHRI SADGURU H S SCH BARDWARA CHITRAKOOT (UP)
                             </p>
-                            <a href="#" class="read">
-                                Learn more
-                            </a>
+
                         </div>
                         <div>
                             <i class="bi bi-check-circle-fill"
@@ -995,9 +968,7 @@ form{
                             <h3>INTERMEDIATE</h3>
                             <p>CHITRAKOOT INTER COLLEGE KARWI, CHITRAKOOT
                                 (UP)</p>
-                            <a href="#" class="read">
-                                Learn more
-                            </a>
+
                         </div>
                         <div>
                             <i class="bi bi-check-circle-fill"
@@ -1007,9 +978,7 @@ form{
                             <p>MAKHANLAL CHATURVEDI NATIONAL UNIVERSITY OF
                                 JOURNALISM AND COMMUNICATION, BHOPAL (MP)</p>
                             <h5> Graduated: 2025 </h5>
-                            <a href="#" class="read">
-                                Learn more
-                            </a>
+
                         </div>
                         <div>
                             <i class="bi bi-check-circle"
@@ -1019,9 +988,7 @@ form{
                             <p>JAGADGURU RAMBHADRACHARYA DIVYANGA STATE
                                 UNIVERSITY, CHITRAKOOT (UP)</p>
                             <h5>Appearing: .... </h5>
-                            <a href="#" class="read">
-                                Learn more
-                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -1137,8 +1104,12 @@ form{
                                 <img src="Project1.jpeg" alt>
                                 <div class="layer">
                                     <h5>Hospital Management</h5>
-                                    <p>Hospital management involves the overall planning, coordination, and leadership of a healthcare facility's operations to ensure efficient,
-                                        high-quality patient care and financial sustainability. </p>
+                                    <p>Hospital management involves the overall
+                                        planning, coordination, and leadership
+                                        of a healthcare facility's operations to
+                                        ensure efficient,
+                                        high-quality patient care and financial
+                                        sustainability. </p>
                                     <a href="#"><i
                                             class="bi bi-box-arrow-up-right"
                                             style="color: #00eeff;"></i></a>
@@ -1148,8 +1119,12 @@ form{
                                 <img src="Project2.jpeg" alt>
                                 <div class="layer">
                                     <h5>News API APP</h5>
-                                    <p>A news API is an Application Programming Interface (API) that allows developers to access and integrate live,
-                                        up-to-date news articles and headlines from various global sources into their own applications.</p>
+                                    <p>A news API is an Application Programming
+                                        Interface (API) that allows developers
+                                        to access and integrate live,
+                                        up-to-date news articles and headlines
+                                        from various global sources into their
+                                        own applications.</p>
                                     <a href="#"><i
                                             class="bi bi-box-arrow-up-right"
                                             style="color: #00eeff;"></i></a>
@@ -1182,46 +1157,48 @@ form{
             <!-- CONTACT -->
             <section id="contact">
                 <div class="section-content">
-                    <h1 class="section-header">Get in <span>Touch with
-                            us</span></h1>
-                    <h3>Lorem Ipsum is simply dummy text of the printing
-                        industry</h3>
+                    <h1 class="section-header"> Contact <span> Me </span></h1>
+                    <h3>Feel free to reach out to me for any questions or
+                        opportunities!</h3>
                 </div>
                 <div class="contact-section container">
-                    <form>
+                    <form action="mailto:yaduvanshicktd99@gmail.com"
+                        method="post" enctype="text/plain" class="signin-form">
                         <div class="row">
                             <div class="col-md-6 col-sm-11">
-                                <div class="form-group">
+                                <div class="form-input">
                                     <label>Your name</label>
-                                    <input type="text" class="form-control"
-                                        placeholder="Enter Name">
+                                    <input type="text" name="Name"
+                                        placeholder required="Enter Name"
+                                        class="form-control">
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-input">
                                     <label>Email Address</label>
-                                    <input type="email" class="form-control"
-                                        placeholder="Enter Email">
+                                    <input type="email" name="Sender"
+                                        placeholder required
+                                        class="form-control">
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-input">
                                     <label>Mobile No.</label>
-                                    <input type="tel" class="form-control"
-                                        placeholder="Enter mobile number">
+                                    <input type="tel" name="Caller" placeholder
+                                        required class="form-control">
                                 </div>
                             </div>
 
                             <div class="col-md-6 col-sm-11">
-                                <div class="form-group">
+                                <div class="form-input">
                                     <label>Message</label>
                                     <textarea class="form-control"
-                                        placeholder="Enter Your Message"></textarea>
+                                        placeholder="Enter Your Message"
+                                        required></textarea>
                                 </div>
-
-                                <button type="button"
-                                    class="btn btn-primary submit">
-                                    <i class="fa fa-paper-plane"></i> Send
-                                    Message
-                                </button>
+                                <br>
+                                <button type="submit"
+                                    class="btn btn-primary submit"><i
+                                        class="fa fa-paper-plane"></i> Send
+                                    Massege</button>
                             </div>
                         </div>
                     </form>
@@ -1229,13 +1206,31 @@ form{
 
                 <div class="footer">
                     <p>Author: Er. Dheeraj Kumar</p>
-                    <a href="mailto:Yaduvanshicktd99@gmail.com">Yaduvanshicktd99@gmail.com</a>
+                    <a
+                        href="mailto:Yaduvanshicktd99@gmail.com">Yaduvanshicktd99@gmail.com</a>
+
+                    <div class="home-sci">
+                        <a href="https://www.facebook.com/share/1AJgV6ET6a/"
+                            target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a
+                            href="https://www.instagram.com/chitrakootwala_larka?igsh=MWtyamdhcjQzZzM0eQ=="
+                            target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/Chitrakootwala"
+                            target="_blank"><i class="bi bi-twitter-x"></i></a>
+                        <a
+                            href="https://www.linkedin.com/in/dheeraj-kumar-218458352?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                            target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/Chitrakootwala-larka"
+                            target="_blank"><i class="fab fa-github"></i></a>
+                
+                    </div>
                 </div>
+
             </section>
 
             <!-- JS FILES -->
-            <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-            <script
+               <script
                 src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
             <script>
    
